syntax = "proto2";

package rpc;

message Card {
  required int32     card_id   = 1;
  required string    name      = 2;
  required Type      type      = 3;
  required Rarity    rarity    = 4;
  required int32     cost      = 5;
  optional Parameter parameter = 6;
}

enum Rarity {
  COMMON    = 0;
  RARE      = 1;
  EPIC      = 2;
  LEGENDARY = 3;
}

enum Type {
  TROOP    = 1;
  SPELL    = 2;
  BUILDING = 3;
}

message Parameter {
  optional int32 hp        = 1;
  optional int32 damage    = 2;
  optional float hit_speed = 3;
  optional int32 range     = 4;
  optional float radius    = 5;
  optional int32 lifetime  = 6;
}
